# riscv-simulator

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  TestAll  alu.cpp  alu.h  assem.txt  cmake_install.cmake  code.txt  cpu.cpp  cpu.h  ctr.cpp  ctr.h  exe.txt  exp.txt  instructions.txt  main.cpp  mem.cpp  mem.h  reg.cpp  reg.h  risc-simulator  riscv-simulator.cbp  riscv-simulator.md  temp.txt
cpu/: cpu.cpp  cpu.h  reg.cpp  reg.h
mem/: mem.cpp  mem.h
test/: test-alu.cpp  test-cpu.cpp
translator/: trans_main.cpp  translator.cpp  translator.h
